# lvgl_7segs_pico

./: .gitmodules  CMakeLists.txt  README.md  lcdTest.c
libraries/: CMakeLists.txt  lv_conf.h
libraries/pico-displayDrivs/: CMakeLists.txt  ili9341.c
libraries/pico-displayTouch/: CMakeLists.txt
ui/: actions.h  fonts.h  images.h  screens.c  screens.h  styles.h  ui.c  ui.h  ui_font_segments7.c
